// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tester/Fieldset Defaults play-test 1`] = `
<div data-test-block="true">
  <fieldset class="_fieldset_u2f5e_5">
    <legend id="legendId-:r2:"
            class="_srOnly_u2f5e_39"
    >
      Ledetekst
    </legend>
    <div class="_legend_u2f5e_15"
         aria-hidden="true"
    >
      Ledetekst
    </div>
    <div class="_contentContainer_u2f5e_32">
      <div>
        Innhold
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Tester/Fieldset WithAttributes play-test 1`] = `
<div data-test-block="true">
  <fieldset id="htmlid"
            data-testid="123ID"
            class="_fieldset_u2f5e_5 dummyClassname"
            lang="nb"
            form="123form"
  >
    <legend id="legendId-:r1:"
            class="_srOnly_u2f5e_39"
    >
      Ledetekst
    </legend>
    <div class="_legend_u2f5e_15"
         aria-hidden="true"
    >
      Ledetekst
    </div>
    <div class="_contentContainer_u2f5e_32">
      <div>
        Innhold
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Tester/Fieldset WithCustomClassNames play-test 1`] = `
<div data-test-block="true">
  <fieldset class="_fieldset_u2f5e_5">
    <legend id="legendId-:rg:"
            class="_srOnly_u2f5e_39"
    >
      Ledetekst
    </legend>
    <div class="_legend_u2f5e_15    dummyClassname"
         aria-hidden="true"
    >
      Ledetekst
    </div>
    <div class="_contentContainer_u2f5e_32">
      <div>
        Innhold
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Tester/Fieldset WithDescription play-test 1`] = `
<div data-test-block="true">
  <fieldset class="_fieldset_u2f5e_5">
    <legend id="legendId-:r3:"
            class="_srOnly_u2f5e_39"
    >
      Ledetekst
    </legend>
    <div class="_legend_u2f5e_15   _legendNoMarginBottom_u2f5e_28"
         aria-hidden="true"
    >
      Ledetekst
    </div>
    <div class="_description_5szkl_17">
      Kort hjelpetekst
    </div>
    <div class="_contentContainer_u2f5e_32">
      <div>
        Innhold
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Tester/Fieldset WithDisabled play-test 1`] = `
<div data-test-block="true">
  <fieldset class="_fieldset_u2f5e_5"
            disabled
  >
    <legend id="legendId-:r9:"
            class="_srOnly_u2f5e_39"
    >
      Ledetekst
    </legend>
    <div class="_legend_u2f5e_15"
         aria-hidden="true"
    >
      Ledetekst
    </div>
    <div class="_contentContainer_u2f5e_32">
      <div>
        Innhold
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Tester/Fieldset WithHelpTextSvgPathAndTitle play-test 1`] = `
<div data-test-block="true">
  <fieldset class="_fieldset_u2f5e_5">
    <legend id="legendId-:ra:"
            class="_srOnly_u2f5e_39"
    >
      Ledetekst
    </legend>
    <div class="_legend_u2f5e_15   _legendNoMarginBottom_u2f5e_28"
         aria-hidden="true"
    >
      Ledetekst
    </div>
    <button class="_button_19ayz_1 _button_extraSmall_19ayz_34 _button_outlined_19ayz_98 _helpButton_5szkl_27"
            data-brightness="default"
            type="button"
            aria-describedby="legendId-:ra:"
            aria-expanded="false"
    >
      <svg class="_systemIcon_o38m2_2 _systemIcon_small_o38m2_5 _icon_19ayz_26"
           viewbox="0 0 24 24"
           focusable="false"
           aria-labelledby="svgtitle-:rb:"
           aria-hidden="false"
           role="img"
      >
        <title id="svgtitle-:rb:">
          Tooltip
        </title>
        <path d="M13 14h-2v-4h2v4Zm0 4h-2v-2h2v2ZM1 21h22L12 2 1 21Z">
        </path>
      </svg>
    </button>
    <div class="_contentContainer_u2f5e_32">
      <div>
        Innhold
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Tester/Fieldset WithHelpToggleEvent smoke-test 1`] = `
<div data-test-block="true">
  <fieldset class="_fieldset_u2f5e_5">
    <legend id="legendId-:re:"
            class="_srOnly_u2f5e_39"
    >
      Ledetekst
    </legend>
    <div class="_legend_u2f5e_15   _legendNoMarginBottom_u2f5e_28"
         aria-hidden="true"
    >
      Ledetekst
    </div>
    <button class="_button_19ayz_1 _button_extraSmall_19ayz_34 _button_outlined_19ayz_98 _helpButton_5szkl_27"
            data-brightness="default"
            type="button"
            aria-describedby="legendId-:re:"
            aria-expanded="false"
    >
      <svg class="_systemIcon_o38m2_2 _systemIcon_small_o38m2_5 _icon_19ayz_26"
           viewbox="0 0 24 24"
           focusable="false"
           aria-labelledby="svgtitle-:rf:"
           aria-hidden="false"
           role="img"
      >
        <title id="svgtitle-:rf:">
          Hjelp
        </title>
        <path d="M10 19h3v3h-3v-3Zm2-17c5.35.22 7.68 5.62 4.5 9.67-.83 1-2.17 1.66-2.83 2.5C13 15 13 16 13 17h-3c0-1.67 0-3.08.67-4.08.66-1 2-1.59 2.83-2.25C15.92 8.43 15.32 5.26 12 5a3 3 0 0 0-3 3H6a6 6 0 0 1 6-6Z">
        </path>
      </svg>
    </button>
    <div class="_contentContainer_u2f5e_32">
      <div>
        Innhold
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Tester/Fieldset WithHideLegend play-test 1`] = `
<div data-test-block="true">
  <fieldset class="_fieldset_u2f5e_5">
    <legend id="legendId-:r6:"
            class="_srOnly_u2f5e_39"
    >
      Ledetekst
    </legend>
    <div class="_legend_u2f5e_15  _srOnly_u2f5e_39 _legendNoMarginBottom_u2f5e_28"
         aria-hidden="true"
    >
      Ledetekst
    </div>
    <button class="_button_19ayz_1 _button_extraSmall_19ayz_34 _button_outlined_19ayz_98 _helpButton_5szkl_27 _srOnly_5szkl_60"
            data-brightness="default"
            type="button"
            aria-describedby="legendId-:r6:"
            aria-expanded="false"
    >
      <svg class="_systemIcon_o38m2_2 _systemIcon_small_o38m2_5 _icon_19ayz_26"
           viewbox="0 0 24 24"
           focusable="false"
           aria-labelledby="svgtitle-:r7:"
           aria-hidden="false"
           role="img"
      >
        <title id="svgtitle-:r7:">
          Hjelp
        </title>
        <path d="M10 19h3v3h-3v-3Zm2-17c5.35.22 7.68 5.62 4.5 9.67-.83 1-2.17 1.66-2.83 2.5C13 15 13 16 13 17h-3c0-1.67 0-3.08.67-4.08.66-1 2-1.59 2.83-2.25C15.92 8.43 15.32 5.26 12 5a3 3 0 0 0-3 3H6a6 6 0 0 1 6-6Z">
        </path>
      </svg>
    </button>
    <div class="_description_5szkl_17  _srOnly_5szkl_60">
      Kort hjelpetekst
    </div>
    <div class="_contentContainer_u2f5e_32 _contentContainerNoMarginTop_u2f5e_35">
      <div>
        Innhold
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Tester/Fieldset WithLongLegend smoke-test 1`] = `
<div data-test-block="true">
  <fieldset class="_fieldset_u2f5e_5">
    <legend id="legendId-:rd:"
            class="_srOnly_u2f5e_39"
    >
      Loremipsumdolorsitamet.Allesomharlagetennettside,trengtlittfylltekstellerbaresurfetrundtpånettetharantageligvissettdisseordene,etterfulgtaventilsynelatendeeviglangtekstfyltmedlatinskeliksomsetninger.
    </legend>
    <div class="_legend_u2f5e_15"
         aria-hidden="true"
    >
      Loremipsumdolorsitamet.Allesomharlagetennettside,trengtlittfylltekstellerbaresurfetrundtpånettetharantageligvissettdisseordene,etterfulgtaventilsynelatendeeviglangtekstfyltmedlatinskeliksomsetninger.
    </div>
    <div class="_contentContainer_u2f5e_32">
      <div>
        Innhold
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Tester/Fieldset WithRef play-test 1`] = `
<div data-test-block="true">
  <fieldset class="_fieldset_u2f5e_5"
            id="dummyIdForwardedFromRef"
  >
    <legend id="legendId-:r0:"
            class="_srOnly_u2f5e_39"
    >
      Ledetekst
    </legend>
    <div class="_legend_u2f5e_15"
         aria-hidden="true"
    >
      Ledetekst
    </div>
    <div class="_contentContainer_u2f5e_32">
      <div>
        Innhold
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Tester/Fieldset WithShowRequiredMark smoke-test 1`] = `
<div data-test-block="true">
  <fieldset class="_fieldset_u2f5e_5">
    <legend id="legendId-:r4:"
            class="_srOnly_u2f5e_39"
    >
      Ledetekst
    </legend>
    <div class="_legend_u2f5e_15 _legend_required_u2f5e_23"
         aria-hidden="true"
    >
      Ledetekst
    </div>
    <div class="_contentContainer_u2f5e_32">
      <div>
        Innhold
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Tester/Fieldset WithShowRequiredMarkAndLegend smoke-test 1`] = `
<div data-test-block="true">
  <fieldset class="_fieldset_u2f5e_5">
    <legend id="legendId-:r5:"
            class="_srOnly_u2f5e_39"
    >
      <h1 class="_heading_12p5o_1 _heading_level3_12p5o_34">
        Dette er en Heading i legend
      </h1>
      <p class="_paragraph_1kzt5_1 _paragraph_ingress_1kzt5_20">
        <em>
          Dette er en italic Paragraph med ingress variant i legend
        </em>
      </p>
    </legend>
    <div class="_legend_u2f5e_15 _legendWithMarkup_required_u2f5e_23"
         aria-hidden="true"
    >
      <h1 class="_heading_12p5o_1 _heading_level3_12p5o_34">
        Dette er en Heading i legend
      </h1>
      <p class="_paragraph_1kzt5_1 _paragraph_ingress_1kzt5_20">
        <em>
          Dette er en italic Paragraph med ingress variant i legend
        </em>
      </p>
    </div>
    <div class="_contentContainer_u2f5e_32">
      <div>
        Innhold
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Tester/Fieldset WithSpacing smoke-test 1`] = `
<div data-test-block="true">
  <fieldset class="_fieldset_u2f5e_5"
            data-has-spacing="true"
  >
    <legend id="legendId-:r8:"
            class="_srOnly_u2f5e_39"
    >
      Ledetekst
    </legend>
    <div class="_legend_u2f5e_15"
         aria-hidden="true"
    >
      Ledetekst
    </div>
    <div class="_contentContainer_u2f5e_32">
      <div>
        Innhold
      </div>
    </div>
  </fieldset>
</div>
`;
